src/test/deca/context/valid/personal/assign_int.deca
// Description:
//    Assignation d'un int
// Resultats:
//
//
//
// Historique:
//    cree le 07/01/2025

{   
    int x;
    int y;
    x=1;
    x=5;
    x=7;
    x=3;
    y=x;
    if(false){
        y=5;
       
    }
    else{
        x=18;
    }
    y=5;
    y=4;
    y=79;
    while(x==18){
        x=x-1;
        y=5;
    }

    println(x);
    println(y);
   
}